--- a/Menu.html
+++ b/Menu.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+<nav>
+<ul>
+    <li><a href="#Forside.html"></a>Forside</li>
+    <li><a href="om.html"></a>Om Godt Øl</li>
+    <li><a href="Menu.html"></a>Menukort</li>
+    <li><a href="aabningstider.html"></a>Åbningstider</li>
+    <li><a href="kontakt.html"></a>Kontakt</li>
+</ul>
+</nav>
 </body>
 </html>
