--- a/Forside.html
+++ b/Forside.html
@@ -7,17 +7,19 @@
     <title>Godt øl redesign forside</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-<nav>
-<ul>
-    <li><a href="Forside.html"></a>Forside</li>
-    <li><a href="om.html"></a>Om Godt Øl</li>
-    <li><a href="Menu.html"></a>Menukort</li>
-    <li><a href="aabningstider.html"></a>Åbningstider</li>
-    <li><a href="kontakt.html"></a>Kontakt</li>
-</ul>
-</nav>
 
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="Forside.html"></a>Forside</li>
+                <li><a href="om.html"></a>Om Godt Øl</li>
+                <li><a href="Menu.html"></a>Menukort</li>
+                <li><a href="aabningstider.html"></a>Åbningstider</li>
+                <li><a href="kontakt.html"></a>Kontakt</li>
+            </ul>
+        </nav>
+    </header>
 </body>
 
 </html>
