--- a/kontakt.html
+++ b/kontakt.html
@@ -6,16 +6,19 @@
     <title>Godt øl redesign kontakt information</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-<nav>
-<ul>
-    <li><a href="#Forside.html"></a>Forside</li>
-    <li><a href="om.html"></a>Om Godt Øl</li>
-    <li><a href="Menu.html"></a>Menukort</li>
-    <li><a href="aabningstider.html"></a>Åbningstider</li>
-    <li><a href="kontakt.html"></a>Kontakt</li>
-</ul>
-</nav>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#Forside.html"></a>Forside</li>
+                <li><a href="om.html"></a>Om Godt Øl</li>
+                <li><a href="Menu.html"></a>Menukort</li>
+                <li><a href="aabningstider.html"></a>Åbningstider</li>
+                <li><a href="kontakt.html"></a>Kontakt</li>
+            </ul>
+        </nav>
+    </header>
 
 </body>
 </html>
