menu med lidt css

--- a/kontakt.html
+++ b/kontakt.html
@@ -11,11 +11,11 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#Forside.html"></a>Forside</li>
-                <li><a href="om.html"></a>Om Godt Øl</li>
-                <li><a href="Menu.html"></a>Menukort</li>
-                <li><a href="aabningstider.html"></a>Åbningstider</li>
-                <li><a href="kontakt.html"></a>Kontakt</li>
+                <li><a href="Forside.html">Forside</a></li>
+                <li><a href="om.html">Om Godt Øl</a></li>
+                <li><a href="Menu.html">Menukort</a></li>
+                <li><a href="aabningstider.html">Åbningstider</a></li>
+                <li><a href="#kontakt.html">Kontakt</a></li>
             </ul>
         </nav>
     </header>
