--- a/om.html
+++ b/om.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="da">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,13 +12,14 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#Forside.html"></a>Forside</li>
-                <li><a href="om.html"></a>Om Godt Øl</li>
-                <li><a href="Menu.html"></a>Menukort</li>
-                <li><a href="aabningstider.html"></a>Åbningstider</li>
-                <li><a href="kontakt.html"></a>Kontakt</li>
+                <li><a href="Forside.html">Forside</a></li>
+                <li><a href="#om.html">Om Godt Øl</a></li>
+                <li><a href="Menu.html">Menukort</a></li>
+                <li><a href="aabningstider.html">Åbningstider</a></li>
+                <li><a href="kontakt.html">Kontakt</a></li>
             </ul>
         </nav>
     </header>
 </body>
+
 </html>
