--- a/om.html
+++ b/om.html
@@ -12,10 +12,10 @@
     <header>
         <nav>
             <ul>
-                <li><a href="Forside.html">Forside</a></li>
+                <li><a href="forside.html">Forside</a></li>
                 <li><a href="#om.html">Om Godt Øl</a></li>
-                <li><a href="Menu.html">Menukort</a></li>
-                <li><a href="aabningstider.html">Åbningstider</a></li>
+                <li><a href="oelkort.html">Ølkort</a></li>
+                <li><a href="events.html">Events</a></li>
                 <li><a href="kontakt.html">Kontakt</a></li>
             </ul>
         </nav>
