--- a/oelkort.html
+++ b/oelkort.html
@@ -21,6 +21,42 @@
         </nav>
     </header>
 </body>
+<section id="oelkort">
+    <h3>Ølkort</h3>
+    <div class="beer">
+        <div class="billede">Billede1</div>
+        <div class="billede">Billede2</div>
+        <div class="billede">Billede3</div>
+        <div class="billede">Billede4</div>
+        <div class="billede">Billede5</div>
+        <div class="billede">Billede6</div>
+        <div class="billede">Billede7</div>
+        <div class="billede">Billede8</div>
+        <div class="billede">Billede9</div>
+        <div class="billede">Billede10</div>
+        <div class="billede">Billede11</div>
+        <div class="billede">Billede12</div>
+    </div>
+    <div class="undermenu">
+        <div class="vin">
+            <h3>Vin kort</h3>
+            Rødvin – Crystal Bay, Pinot Noir fra Syd Australien
+            <br>Hvidvin – Crystal Bay, Sauvignon Blanc fra New Zealand
+        </div>
+        <div class="drinks">
+            <h3>Drinks kort</h3>
+            Rom og Cola<br> Whisky og cola<br> Gin og Tonic 4 cl. Gin Bombay Sapphire, fevertree tonic.<br> Gin Hass. 4 cl. Bombay Sapphire, schwepes lemon, mangosirup, knust is lime<br> Tom Collins – 4 cl. Bombay Sapphire, 2 cl.citronsaft, sukker, pellegrino, knust is.<br> Godt og Blåt – 4 cl. Bombay Sapphire, Blå Caracao, appelsin, tonic, knust is.</div>
+    </div>
+    <div class="snacks">
+        <h3>Snacks</h3>
+        <p>Chips
+        <br>Beernuts
+        <br>Peanuts
+        <br>Ølpølser
+        </p>
+    </div>
+
+</section>
 
 <footer>
 
