--- a/om.html
+++ b/om.html
@@ -21,7 +21,19 @@
         </nav>
     </header>
 </body>
-<h1></h1>
+<section id="Om">
+    <div class="sectionwrapper">
+        <div class="video">
+            <h3>Vores korte video</h3>
+        </div>
+        <div class="tekst">
+            <p>Godt Øl er en hyggelig specialølbar øludsalg. <br>Baren ligger i den hyggelige middelalderby i indre København, <br>tæt på Christiansborg og strøget. Så uanset om du nyder strøget <br>eller den mere kulturelle del af København, så slå et smut forbi Godt Øl <br>og nyd den hyggelige stemning over et glas Godt Øl.</p>
+        </div>
+
+    </div>
+
+
+</section>
 
 <footer>
 
