--- a/Events.html
+++ b/Events.html
@@ -12,14 +12,29 @@
     <header>
         <nav>
             <ul>
-                <li><a href="forside.html">Forside</a></li>
+                <li><a href="Forside.html">Forside</a></li>
                 <li><a href="om.html">Om Godt Øl</a></li>
                 <li><a href="oelkort.html">Ølkort</a></li>
-                <li><a href="#events.html">Events</a></li>
+                <li><a href="#Events.html">Åbningstider</a></li>
                 <li><a href="kontakt.html">Kontakt</a></li>
             </ul>
         </nav>
     </header>
+
+    <section id="sectionwrapper">
+        <div class="tekst">
+
+            <h3>Happy hour
+            </h3>
+            <p>Hver mandag - onsdag fra 17-19 har vi Happy Hour på udvalgte fadøl, hvor du kan få en stor fadøl til en lille fadølspris. Vi glæder os til at af dig. </p>
+        </div>
+
+        <h3>Godt øl events</h3>
+        <h4>Ølsmagning og foredrag</h4>
+        <p>Kom med til ølsmagning ved Kent Brunstedt og smag på 8 forskellige øl. Vi tager på en tur igennem de forskellige ølstilarter og hører lidt om, hvad der kendetegner de enkelte øltyper. Derudover kan du høre et lille foredrag, hvor Kent fortæller om øl. Kent har selv brygget øl i de sidste 10 år. Vi starter med det mest kendte, en pilsner og bevæger os rundt i forskellige stilarter, med indslag om de forskellige råvarer, vand, malt, humle og gær som er de væsentlige ting man bruger til ølfremstilling. Vi ender med lidt mørk / kraftig øl. Undervejs vil der være lidt salt, ost og sødt til ganen. Mød op og få en hyggelig aften i ølletstegn. Vi glæder os til at se dig. Hele herligheden koster 200 kr. Vi starter kl. 19 og slutter ca. kl. 21. Billetter til ølsmagningen kan købes på billetto.</p>
+
+
+    </section>
 
 </body>
 
