--- a/oelkort.html
+++ b/oelkort.html
@@ -24,18 +24,18 @@
 <section id="oelkort">
     <h3>Ølkort</h3>
     <div class="beer">
-        <div class="billede">Billede1</div>
-        <div class="billede">Billede2</div>
-        <div class="billede">Billede3</div>
-        <div class="billede">Billede4</div>
-        <div class="billede">Billede5</div>
-        <div class="billede">Billede6</div>
-        <div class="billede">Billede7</div>
-        <div class="billede">Billede8</div>
-        <div class="billede">Billede9</div>
-        <div class="billede">Billede10</div>
-        <div class="billede">Billede11</div>
-        <div class="billede">Billede12</div>
+        <div class="billede"><img src="images/1.jpg"></div>
+        <div class="billede"><img src="images/2.jpg"></div>
+        <div class="billede"><img src="images/3.jpg"></div>
+        <div class="billede"><img src="images/4.jpg"></div>
+        <div class="billede"><img src="images/5.jpg"></div>
+        <div class="billede"><img src="images/6.jpg"></div>
+        <div class="billede"><img src="images/7.jpg"></div>
+        <div class="billede"><img src="images/8.jpg"></div>
+        <div class="billede"><img src=images/9.jpg></div>
+        <div class="billede"><img src="images/10.jpg"></div>
+        <div class="billede"><img src="images/11.jpg"></div>
+        <div class="billede"><img src="images/12.jpg"></div>
     </div>
     <div class="undermenu">
         <div class="vin">
@@ -50,9 +50,9 @@
     <div class="snacks">
         <h3>Snacks</h3>
         <p>Chips
-        <br>Beernuts
-        <br>Peanuts
-        <br>Ølpølser
+            <br>Beernuts
+            <br>Peanuts
+            <br>Ølpølser
         </p>
     </div>
 
