--- a/kontakt.html
+++ b/kontakt.html
@@ -20,10 +20,32 @@
             </ul>
         </nav>
     </header>
+    <section id="kontakt">
+        <h3>Kontakt os</h3>
+        <div class="info">
+            <div class="tekst"></div>
+            <div class="kontakt"></div>
+        </div>
+        <div class="aaben">
+            <div class="aabning">
+                <h3>Åbningstider</h3>
+                <p>Mandag 15-24
+                    <br>Tirsdag 15-24
+                    <br>Onsdag 15-24
+                    <br>Torsdag 15-01
+                    <br>Fredag 15-01
+                    <br>Lørdag 15-01
+                    <br>Søndag 15-23</p>
+            </div>
+            <div class="kort">Billede af kort</div>
+        </div>
+        <div class="Billeder">
+            <div class="billede">billede ind her</div>
+            <div class="billede">billede</div>
+        </div>
+    </section>
+    <footer>
 
+    </footer>
 </body>
-<footer>
-
-</footer>
-
 </html>
