kontakt med css

--- a/kontakt.html
+++ b/kontakt.html
@@ -23,8 +23,24 @@
     <section id="kontakt">
         <h3>Kontakt os</h3>
         <div class="info">
-            <div class="tekst"></div>
-            <div class="kontakt"></div>
+            <div class="tekst">
+                <p>Ønsker du at komme i kontakt med Godt Øl<br>så kontakt os, på mobil: +45 23 35 68 66. <br>eller send os en e-mail via. formularen.</p>
+            </div>
+            <div class="kontakt">
+                <div class="container">
+                    <form action="/action_page.php">
+
+                        <input type="text" id="fname" name="firstname" placeholder="Dit navn..">
+
+                        <input type="text" id="fname" name="firstname" placeholder="Din E-mail adresse..">
+
+                        <textarea id="subject" name="subject" placeholder="Skriv din henvendelse her.." style="height:200px"></textarea>
+
+
+                        <input type="submit" value="Send">
+                    </form>
+                </div>
+            </div>
         </div>
         <div class="aaben">
             <div class="aabning">
@@ -48,4 +64,5 @@
 
     </footer>
 </body>
+
 </html>
