kontakt og css rettet

--- a/kontakt.html
+++ b/kontakt.html
@@ -53,11 +53,18 @@
                     <br>Lørdag 15-01
                     <br>Søndag 15-23</p>
             </div>
-            <div class="kort">Billede af kort</div>
+            <div class="kort">
+                <img src="images/kort.jpg" width="40%" alt="knabrostræde 25, 1210 københavn k">
+            </div>
         </div>
         <div class="Billeder">
-            <div class="billede">billede ind her</div>
-            <div class="billede">billede</div>
+            <div class="billede">
+                <!--       indsæt billeder nedenfor        -->
+                <img src="images/" alt="stemningen på baren">
+            </div>
+            <div class="billede">
+                <img src="images/" alt="stemningen på baren">
+            </div>
         </div>
     </section>
     <footer>
