--- a/oelkort.html
+++ b/oelkort.html
@@ -4,12 +4,16 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex">
+    <meta name="msapplication-TileColor" content="#2b5797">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Godt øl redesign menu</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div id="myNav" class="overlay">
+      <header>
+       <div id="myNav" class="overlay">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <div class="overlay-content">
             <img src="images/godtoel_logo.png" width="150px" alt="Godt øl logo">
@@ -31,6 +35,9 @@
             document.getElementById("myNav").style.width = "0%";
         }
     </script>
+    <img src="images/godtoel_logo.png" width="100px" alt="Godt øl logo">
+    <p><a href="https://www.facebook.com/godtoel.dk/"> <i class="fa fa-facebook-official w3-hover-opacity"></i></a></p>
+</header>
 </body>
 <section id="oelkort">
     <h1>Ølkort</h1>
