--- a/oelkort.html
+++ b/oelkort.html
@@ -12,32 +12,33 @@
 </head>
 
 <body>
-      <header>
-       <div id="myNav" class="overlay">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <div class="overlay-content">
-            <img src="images/godtoel_logo.png" width="150px" alt="Godt øl logo">
-            <a href="forside.html">Forside</a>
-            <a href="om.html">Om Godt Øl</a>
-            <a href="oelkort.html">Ølkort</a>
-            <a href="events.html">Events</a>
-            <a href="kontakt.html">Kontakt</a>
+    <header>
+        <div id="myNav" class="overlay">
+            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+            <div class="overlay-content">
+                <img src="images/godtoel_logo.png" width="150px" alt="Godt øl logo">
+                <a href="forside.html">Forside</a>
+                <a href="om.html">Om Godt Øl</a>
+                <a href="oelkort.html">Ølkort</a>
+                <a href="events.html">Events</a>
+                <a href="kontakt.html">Kontakt</a>
+            </div>
         </div>
-    </div>
-    <span style="font-size:30px;cursor:pointer; color:#f0cf81;" onclick="openNav()">&#9776; </span>
+        <span style="font-size:30px;cursor:pointer; color:#f0cf81;" onclick="openNav()">&#9776; </span>
 
-    <script>
-        function openNav() {
-            document.getElementById("myNav").style.width = "100%";
-        }
+        <script>
+            function openNav() {
+                document.getElementById("myNav").style.width = "100%";
+            }
 
-        function closeNav() {
-            document.getElementById("myNav").style.width = "0%";
-        }
-    </script>
-    <img src="images/godtoel_logo.png" width="100px" alt="Godt øl logo">
-    <p><a href="https://www.facebook.com/godtoel.dk/"> <i class="fa fa-facebook-official w3-hover-opacity"></i></a></p>
-</header>
+            function closeNav() {
+                document.getElementById("myNav").style.width = "0%";
+            }
+
+        </script>
+        <img src="images/godtoel_logo.png" width="100px" alt="Godt øl logo">
+        <p><a href="https://www.facebook.com/godtoel.dk/"> <i class="fa fa-facebook-official w3-hover-opacity"></i></a></p>
+    </header>
 </body>
 <section id="oelkort">
     <h1>Ølkort</h1>
@@ -58,12 +59,13 @@
     <div class="undermenu">
         <div class="vin">
             <h1>Vin kort</h1>
-            Rødvin – Crystal Bay, Pinot Noir fra Syd Australien
-            <br>Hvidvin – Crystal Bay, Sauvignon Blanc fra New Zealand
+            <p>Rødvin – Crystal Bay, Pinot Noir fra Syd Australien
+                <br>Hvidvin – Crystal Bay, Sauvignon Blanc fra New Zealand</p>
         </div>
         <div class="drinks">
-            <h3>Drinks kort</h3>
-            Rom og Cola<br> Whisky og cola<br> Gin og Tonic 4 cl. Gin Bombay Sapphire, fevertree tonic.<br> Gin Hass. 4 cl. Bombay Sapphire, schwepes lemon, mangosirup, knust is lime<br> Tom Collins – 4 cl. Bombay Sapphire, 2 cl.citronsaft, sukker, pellegrino, knust is.<br> Godt og Blåt – 4 cl. Bombay Sapphire, Blå Caracao, appelsin, tonic, knust is.</div>
+            <h1>Drinks kort</h1>
+            <p>Rom og Cola<br> Whisky og cola<br> Gin og Tonic 4 cl. Gin Bombay Sapphire, fevertree tonic.<br> Gin Hass. 4 cl. Bombay Sapphire, schwepes lemon, mangosirup, knust is lime<br> Tom Collins – 4 cl. Bombay Sapphire, 2 cl.citronsaft, sukker, pellegrino, knust is.<br> Godt og Blåt – 4 cl. Bombay Sapphire, Blå Caracao, appelsin, tonic, knust is.</p>
+        </div>
     </div>
     <div class="snacks">
         <h1>Snacks</h1>
