--- a/oelkort.html
+++ b/oelkort.html
@@ -59,22 +59,24 @@
     <div class="undermenu">
         <div class="vin">
             <h1>Vin kort</h1>
-            <p>Rødvin – Crystal Bay, Pinot Noir fra Syd Australien
-                <br>Hvidvin – Crystal Bay, Sauvignon Blanc fra New Zealand</p>
+            <p>Rødvin – Crystal Bay, <br>Pinot Noir fra Syd Australien
+                <br>
+                <br>Hvidvin – Crystal Bay, <br>Sauvignon Blanc fra New Zealand</p>
         </div>
         <div class="drinks">
             <h1>Drinks kort</h1>
-            <p>Rom og Cola<br> Whisky og cola<br> Gin og Tonic 4 cl. Gin Bombay Sapphire, fevertree tonic.<br> Gin Hass. 4 cl. Bombay Sapphire, schwepes lemon, mangosirup, knust is lime<br> Tom Collins – 4 cl. Bombay Sapphire, 2 cl.citronsaft, sukker, pellegrino, knust is.<br> Godt og Blåt – 4 cl. Bombay Sapphire, Blå Caracao, appelsin, tonic, knust is.</p>
+            <p>Rom og Cola<br> Whisky og cola<br>Gin og tonic<br> Gin Hass. <br> Tom Collins <br> Godt og Blåt</p>
+        </div>
+        <div class="snacks">
+            <h1>Snacks</h1>
+            <p>Chips
+                <br>Beernuts
+                <br>Peanuts
+                <br>Ølpølser
+            </p>
         </div>
     </div>
-    <div class="snacks">
-        <h1>Snacks</h1>
-        <p>Chips
-            <br>Beernuts
-            <br>Peanuts
-            <br>Ølpølser
-        </p>
-    </div>
+
 
 </section>
 
