--- a/kontakt.html
+++ b/kontakt.html
@@ -13,36 +13,37 @@
 
 <body>
     <header>
-       <div id="myNav" class="overlay">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <div class="overlay-content">
-            <img src="images/godtoel_logo.png" width="150px" alt="Godt øl logo">
-            <a href="forside.html">Forside</a>
-            <a href="om.html">Om Godt Øl</a>
-            <a href="oelkort.html">Ølkort</a>
-            <a href="events.html">Events</a>
-            <a href="kontakt.html">Kontakt</a>
+        <div id="myNav" class="overlay">
+            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+            <div class="overlay-content">
+                <img src="images/godtoel_logo.png" width="150px" alt="Godt øl logo">
+                <a href="forside.html">Forside</a>
+                <a href="om.html">Om Godt Øl</a>
+                <a href="oelkort.html">Ølkort</a>
+                <a href="events.html">Events</a>
+                <a href="kontakt.html">Kontakt</a>
+            </div>
         </div>
-    </div>
-    <span style="font-size:30px;cursor:pointer; color:#f0cf81;" onclick="openNav()">&#9776; </span>
+        <span style="font-size:30px;cursor:pointer; color:#f0cf81;" onclick="openNav()">&#9776; </span>
 
-    <script>
-        function openNav() {
-            document.getElementById("myNav").style.width = "100%";
-        }
+        <script>
+            function openNav() {
+                document.getElementById("myNav").style.width = "100%";
+            }
 
-        function closeNav() {
-            document.getElementById("myNav").style.width = "0%";
-        }
-    </script>
-    <img src="images/godtoel_logo.png" width="100px" alt="Godt øl logo">
-    <p><a href="https://www.facebook.com/godtoel.dk/"> <i class="fa fa-facebook-official w3-hover-opacity"></i></a></p>
-</header>
+            function closeNav() {
+                document.getElementById("myNav").style.width = "0%";
+            }
+        </script>
+        <img src="images/godtoel_logo.png" width="100px" alt="Godt øl logo">
+        <p><a href="https://www.facebook.com/godtoel.dk/"> <i class="fa fa-facebook-official w3-hover-opacity"></i></a></p>
+    </header>
 
     <section id="kontakt">
-        <h1>Kontakt os</h1>
+
         <div class="info">
             <div class="tekst">
+                <h1>Kontakt os</h1>
                 <p>Ønsker du at komme i kontakt med Godt Øl<br>så kontakt os, på mobil: +45 23 35 68 66. <br>eller send os en e-mail via. formularen.</p>
             </div>
             <div class="kontakt">
@@ -53,7 +54,7 @@
 
                         <input type="text" id="fname" name="firstname" placeholder="Din E-mail adresse..">
 
-                        <textarea id="subject" name="subject" placeholder="Skriv din henvendelse her.." style="height:200px"></textarea>
+                        <textarea id="subject" name="subject" placeholder="Skriv din henvendelse her.."></textarea>
 
 
                         <input type="submit" value="Send">
@@ -61,8 +62,9 @@
                 </div>
             </div>
         </div>
-        <div class="aaben">
-            <div class="aabning">
+
+        <div class="open">
+            <div class="time">
                 <h1>Åbningstider</h1>
                 <p>Mandag 15-24
                     <br>Tirsdag 15-24
@@ -75,6 +77,7 @@
             <div class="kort">
                 <img src="images/kort.jpg" width="40%" alt="knabrostræde 25, 1210 københavn k">
             </div>
+        </div>
         </div>
         <div class="Billeder">
             <div class="billede">
