--- a/Forside.html
+++ b/Forside.html
@@ -22,7 +22,7 @@
 
                 <img src="images/godtoel_logo.png" width="150px" alt="Godt øl logo">
 
-                <a href="forside.html">Forside</a>
+                <a href="#forside.html">Forside</a>
 
                 <a href="om.html">Om Godt Øl</a>
 
@@ -97,7 +97,6 @@
 
             // start the animation
 
-
             setInterval(switchImage, 5000);
 
         }
@@ -139,12 +138,15 @@
 
 
 
+    <section id="forside">
 
-    <canvas id='showCanvas' width='1080' height='580'>
+        <canvas id='showCanvas' width='1080' height='580'>
 
                Canvas Not Supported
 
            </canvas>
+
+    </section>
 
 
 
