--- a/Forside.html
+++ b/Forside.html
@@ -52,6 +52,7 @@
                 document.getElementById("myNav").style.width = "0%";
 
             }
+
         </script>
 
         <img src="images/godtoel_logo.png" width="100px" alt="Godt øl logo">
@@ -66,7 +67,7 @@
     <script type="text/javascript">
         var imagePaths = [
 
-            "images/beer.jpg", "images/bar.jpg", "images/flereoel.jpg", "images/oel.jpg", "images/oel2.jpg"
+            "images/beer.jpg", "images/bar.jpg", "images/beers.jpg", "images/oel.jpg", "images/oel2.jpg"
 
         ];
 
@@ -90,7 +91,7 @@
 
             img.setAttribute('width', '1080');
 
-            img.setAttribute('height', '580');
+            img.setAttribute('height', '450');
 
             switchImage();
 
@@ -124,7 +125,7 @@
 
             showCanvasCtx.save();
 
-            showCanvasCtx.drawImage(img, 0, 0, 1080, 580);
+            showCanvasCtx.drawImage(img, 0, 0, 1080, 450);
 
             showCanvasCtx.globalAlpha += 0.1;
 
@@ -135,12 +136,13 @@
             showCanvasCtx.restore();
 
         }
+
     </script>
 
 
 
 
-    <canvas id='showCanvas' width='1080' height='580'>
+    <canvas id='showCanvas' width='1080' height='450'>
 
                Canvas Not Supported
 
@@ -149,4 +151,5 @@
 
 
 </body>
+
 </html>
