--- a/oelkort.html
+++ b/oelkort.html
@@ -17,11 +17,15 @@
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <div class="overlay-content">
                 <img src="images/godtoel_logo.png" width="150px" alt="Godt øl logo">
-                <a href="forside.html">Forside</a>
-                <a href="om.html">Om Godt Øl</a>
-                <a href="oelkort.html">Ølkort</a>
-                <a href="events.html">Events</a>
-                <a href="kontakt.html">Kontakt</a>
+                 <a href="#forside.html">FORSIDE</a>
+
+                <a href="om.html">OM GODT ØL</a>
+
+                <a href="oelkort.html">ØLKORT</a>
+
+                <a href="events.html">EVENTS</a>
+
+                <a href="kontakt.html">KONTAKT</a>
             </div>
         </div>
         <span style="font-size:30px;cursor:pointer; color:#f0cf81;" onclick="openNav()">&#9776; </span>
