--- a/Events.html
+++ b/Events.html
@@ -17,7 +17,7 @@
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <div class="overlay-content">
                 <img src="images/godtoel_logo.png" width="150px" alt="Godt øl logo">
-                 <a href="#forside.html">FORSIDE</a>
+                <a href="#forside.html">FORSIDE</a>
 
                 <a href="om.html">OM GODT ØL</a>
 
@@ -38,7 +38,6 @@
             function closeNav() {
                 document.getElementById("myNav").style.width = "0%";
             }
-
         </script>
         <img src="images/godtoel_logo.png" width="100px" alt="Godt øl logo">
         <p><a href="https://www.facebook.com/godtoel.dk/"> <i class="fa fa-facebook-official w3-hover-opacity"></i></a></p>
@@ -48,12 +47,12 @@
         <div class="sectionwrapper">
             <div class="tekst">
 
-                <h1>Happy hour
+                <h1>HAPPY HOUR
                 </h1>
                 <p>Hver mandag - onsdag fra 17-19 <br>har vi Happy Hour på udvalgte fadøl, <br>hvor du kan få en stor fadøl til en lille fadølspris. <br>Vi glæder os til at af dig. </p>
 
 
-                <h1>Kommende events</h1>
+                <h1>KOMMENDE EVENTS</h1>
                 <h4>Ølsmagning og foredrag</h4>
                 <p>Kom med til ølsmagning ved Kent Brunstedt og smag på 8 forskellige øl. <br>Vi tager på en tur igennem de forskellige ølstilarter og hører lidt om, <br>hvad der kendetegner de enkelte øltyper. <br>Derudover kan du høre et lille foredrag, hvor Kent fortæller om øl.<br> Kent har selv brygget øl i de sidste 10 år. <br>Vi starter med det mest kendte, en pilsner og bevæger os rundt i forskellige stilarter, <br>med indslag om de forskellige råvarer, vand, malt, humle og gær <br>som er de væsentlige ting man bruger til ølfremstilling.<br> Vi ender med lidt mørk / kraftig øl. Undervejs vil der være <br>lidt salt, ost og sødt til ganen. Mød op og få en hyggelig aften i ølletstegn. <br>Vi glæder os til at se dig.
                     <p></p>
