--- a/Forside.html
+++ b/Forside.html
@@ -22,7 +22,7 @@
 
                 <img src="images/godtoel_logo.png" width="150px" alt="Godt øl logo">
 
-                <a href="#forside.html">FORSIDE</a>
+                <a href="forside.html">FORSIDE</a>
 
                 <a href="om.html">OM GODT ØL</a>
 
