--- a/Forside.html
+++ b/Forside.html
@@ -22,7 +22,7 @@
 
                 <img src="images/godtoel_logo.png" width="150px" alt="Godt øl logo">
 
-                <a href="forside.html">FORSIDE</a>
+                <a href="#forside.html">FORSIDE</a>
 
                 <a href="om.html">OM GODT ØL</a>
 
@@ -66,7 +66,7 @@
     <script type="text/javascript">
         var imagePaths = [
 
-            "images/beer.jpg", "images/bar.jpg", "images/flereoel.jpg", "images/oel.jpg", "images/oel2.jpg"
+            "images/beer.jpg", "images/bar.jpg", "images/beers.jpg", "images/oel.jpg", "images/oel2.jpg"
 
         ];
 
@@ -90,7 +90,7 @@
 
             img.setAttribute('width', '1080');
 
-            img.setAttribute('height', '580');
+            img.setAttribute('height', '450');
 
             switchImage();
 
@@ -123,7 +123,7 @@
 
             showCanvasCtx.save();
 
-            showCanvasCtx.drawImage(img, 0, 0, 1080, 580);
+            showCanvasCtx.drawImage(img, 0, 0, 1080, 450);
 
             showCanvasCtx.globalAlpha += 0.1;
 
@@ -140,7 +140,7 @@
 
     <section id="forside">
 
-        <canvas id='showCanvas' width='1080' height='580'>
+        <canvas id='showCanvas' width='1080' height='450'>
 
                Canvas Not Supported
 
