--- a/om.html
+++ b/om.html
@@ -51,7 +51,7 @@
                 <iframe width="600" height="400" src="https://www.youtube.com/embed/mByQJfr3qvE?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
             </div>
             <div class="tekst">
-                <h1>OM GODT ØL</h1>
+                <h1>Om Godt øl</h1>
                 <p>Godt Øl er en hyggelig specialølbar øludsalg. <br>Baren ligger i den hyggelige middelalderby i indre København, <br>tæt på Christiansborg og strøget. Så uanset om du nyder strøget <br>eller den mere kulturelle del af København, så slå et smut forbi Godt Øl <br>og nyd den hyggelige stemning over et glas Godt Øl.</p>
             </div>
 
