--- a/kontakt.html
+++ b/kontakt.html
@@ -17,7 +17,7 @@
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <div class="overlay-content">
                 <img src="images/godtoel_logo.png" width="150px" alt="Godt øl logo">
-                 <a href="#forside.html">FORSIDE</a>
+                <a href="#forside.html">FORSIDE</a>
 
                 <a href="om.html">OM GODT ØL</a>
 
@@ -38,6 +38,7 @@
             function closeNav() {
                 document.getElementById("myNav").style.width = "0%";
             }
+
         </script>
         <img src="images/godtoel_logo.png" width="100px" alt="Godt øl logo">
         <p><a href="https://www.facebook.com/godtoel.dk/"> <i class="fa fa-facebook-official w3-hover-opacity"></i></a></p>
@@ -47,7 +48,7 @@
 
         <div class="info">
             <div class="tekst">
-                <h1>KONTAKT OS</h1>
+                <h1>Kontakt os</h1>
                 <p>Ønsker du at komme i kontakt med Godt Øl<br>så kontakt os, på mobil: +45 23 35 68 66. <br>eller send os en e-mail via. formularen.</p>
             </div>
             <div class="kontakt">
@@ -69,7 +70,7 @@
 
         <div class="open">
             <div class="time">
-                <h1>ÅBNINGSTIDER</h1>
+                <h1>Åbningstider</h1>
                 <p>Mandag 15-24
                     <br>Tirsdag 15-24
                     <br>Onsdag 15-24
