--- a/om.html
+++ b/om.html
@@ -44,14 +44,12 @@
         <img src="images/godtoel_logo.png" width="100px" alt="Godt øl logo">
         <p><a href="https://www.facebook.com/godtoel.dk/"> <i class="fa fa-facebook-official w3-hover-opacity"></i></a></p>
     </header>
-    <section id="om">
+    <section id="Om">
         <div class="sectionwrapper">
             <div class="video">
-
-                <iframe width="600" height="400" src="https://www.youtube.com/embed/mByQJfr3qvE?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                <h1>Vores korte video</h1>
             </div>
             <div class="tekst">
-                <h1>OM GODT ØL</h1>
                 <p>Godt Øl er en hyggelig specialølbar øludsalg. <br>Baren ligger i den hyggelige middelalderby i indre København, <br>tæt på Christiansborg og strøget. Så uanset om du nyder strøget <br>eller den mere kulturelle del af København, så slå et smut forbi Godt Øl <br>og nyd den hyggelige stemning over et glas Godt Øl.</p>
             </div>
 
