--- a/kontakt.html
+++ b/kontakt.html
@@ -17,7 +17,7 @@
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <div class="overlay-content">
                 <img src="images/godtoel_logo.png" width="150px" alt="Godt øl logo">
-                 <a href="#forside.html">FORSIDE</a>
+                <a href="#forside.html">FORSIDE</a>
 
                 <a href="om.html">OM GODT ØL</a>
 
@@ -79,19 +79,12 @@
                     <br>Søndag 15-23</p>
             </div>
             <div class="kort">
-                <img src="images/kort.jpg" width="40%" alt="knabrostræde 25, 1210 københavn k">
+                <img src="images/kort.png" width="40%" alt="knabrostræde 25, 1210 københavn k">
+                <p> Knabrostræde 25, 1210 København K.</p>
             </div>
         </div>
-        </div>
-        <div class="Billeder">
-            <div class="billede">
-                <!--       indsæt billeder nedenfor        -->
-                <img src="images/" alt="stemningen på baren">
-            </div>
-            <div class="billede">
-                <img src="images/" alt="stemningen på baren">
-            </div>
-        </div>
+
+
     </section>
     <footer>
 
