--- a/om.html
+++ b/om.html
@@ -18,7 +18,7 @@
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <div class="overlay-content">
                 <img src="images/godtoel_logo.png" width="150px" alt="Godt øl logo">
-                <a href="#forside.html">FORSIDE</a>
+                <a href="Forside.html">FORSIDE</a>
 
                 <a href="om.html">OM GODT ØL</a>
 
@@ -39,7 +39,6 @@
             function closeNav() {
                 document.getElementById("myNav").style.width = "0%";
             }
-
         </script>
         <img src="images/godtoel_logo.png" width="100px" alt="Godt øl logo">
         <p><a href="https://www.facebook.com/godtoel.dk/"> <i class="fa fa-facebook-official w3-hover-opacity"></i></a></p>
@@ -50,11 +49,9 @@
                 <h1>Vores korte video</h1>
             </div>
             <div class="tekst">
-<<<<<<< HEAD
-=======
-                <h1>Om Godt øl</h1>
->>>>>>> origin/master
-                <p>Godt Øl er en hyggelig specialølbar øludsalg. <br>Baren ligger i den hyggelige middelalderby i indre København, <br>tæt på Christiansborg og strøget. Så uanset om du nyder strøget <br>eller den mere kulturelle del af København, så slå et smut forbi Godt Øl <br>og nyd den hyggelige stemning over et glas Godt Øl.</p>
+                <<<<<<< HEAD=======< h1>Om Godt øl</h1>
+                    >>>>>>> origin/master
+                    <p>Godt Øl er en hyggelig specialølbar øludsalg. <br>Baren ligger i den hyggelige middelalderby i indre København, <br>tæt på Christiansborg og strøget. Så uanset om du nyder strøget <br>eller den mere kulturelle del af København, så slå et smut forbi Godt Øl <br>og nyd den hyggelige stemning over et glas Godt Øl.</p>
             </div>
 
         </div>
