--- a/Events.html
+++ b/Events.html
@@ -17,7 +17,7 @@
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <div class="overlay-content">
                 <img src="images/godtoel_logo.png" width="150px" alt="Godt øl logo">
-                <a href="forside.html">Forside</a>
+                <a href="Forside.html">Forside</a>
                 <a href="om.html">Om Godt Øl</a>
                 <a href="oelkort.html">Ølkort</a>
                 <a href="events.html">Events</a>
