--- a/oelkort.html
+++ b/oelkort.html
@@ -17,7 +17,7 @@
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <div class="overlay-content">
                 <img src="images/godtoel_logo.png" width="150px" alt="Godt øl logo">
-                <a href="#forside.html">FORSIDE</a>
+                <a href="Forside.html">FORSIDE</a>
 
                 <a href="om.html">OM GODT ØL</a>
 
