--- a/om.html
+++ b/om.html
@@ -39,6 +39,7 @@
             function closeNav() {
                 document.getElementById("myNav").style.width = "0%";
             }
+
         </script>
         <img src="images/godtoel_logo.png" width="100px" alt="Godt øl logo">
         <p><a href="https://www.facebook.com/godtoel.dk/"> <i class="fa fa-facebook-official w3-hover-opacity"></i></a></p>
@@ -46,10 +47,10 @@
     <section id="Om">
         <div class="sectionwrapper">
             <div class="video">
-                <h1>Vores korte video</h1>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/mByQJfr3qvE?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
             </div>
             <div class="tekst">
-                <<<<<<< HEAD=======< h1>Om Godt øl</h1>
+                < h1>Om Godt øl</h1>
                     >>>>>>> origin/master
                     <p>Godt Øl er en hyggelig specialølbar øludsalg. <br>Baren ligger i den hyggelige middelalderby i indre København, <br>tæt på Christiansborg og strøget. Så uanset om du nyder strøget <br>eller den mere kulturelle del af København, så slå et smut forbi Godt Øl <br>og nyd den hyggelige stemning over et glas Godt Øl.</p>
             </div>
