--- a/kontakt.html
+++ b/kontakt.html
@@ -80,7 +80,7 @@
                     <br>Søndag 15-23</p>
             </div>
             <div class="kort">
-                <img src="images/kort.png" width="40%" alt="knabrostræde 25, 1210 københavn k">
+                <img src="images/kort.png" alt="knabrostræde 25, 1210 københavn k">
                 <p> Knabrostræde 25, 1210 København K.</p>
             </div>
         </div>
