--- a/Forside.html
+++ b/Forside.html
@@ -9,13 +9,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Godt øl redesign forside</title>
     <link rel="stylesheet" href="style.css">
-
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
@@ -59,6 +52,7 @@
                 document.getElementById("myNav").style.width = "0%";
 
             }
+
         </script>
 
         <img src="images/godtoel_logo.png" width="100px" alt="Godt øl logo">
@@ -73,7 +67,7 @@
     <script type="text/javascript">
         var imagePaths = [
 
-            "images/beer.jpg", "images/bar.jpg", "images/flereoel.jpg", "images/oel.jpg", "images/oel2.jpg"
+         "images/oel.jpg", "images/bar.jpg", "images/oel2.jpg", "images/oeloel.jpg", "images/beer.jpg"
 
         ];
 
@@ -141,6 +135,7 @@
             showCanvasCtx.restore();
 
         }
+
     </script>
 
 
