--- a/Forside.html
+++ b/Forside.html
@@ -52,7 +52,6 @@
                 document.getElementById("myNav").style.width = "0%";
 
             }
-
         </script>
 
         <img src="images/godtoel_logo.png" width="100px" alt="Godt øl logo">
@@ -67,7 +66,7 @@
     <script type="text/javascript">
         var imagePaths = [
 
-         "images/oel.jpg", "images/bar.jpg", "images/oel2.jpg", "images/oeloel.jpg", "images/beer.jpg"
+            "images/oel.jpg", "images/bar.jpg", "images/oel2.jpg", "images/oeloel.jpg", "images/beer.jpg"
 
         ];
 
@@ -135,7 +134,6 @@
             showCanvasCtx.restore();
 
         }
-
     </script>
 
 
@@ -150,8 +148,9 @@
 
     </section>
 
-
-
+    <footer>
+        <p>&copy;Gruppe 14</p>
+    </footer>
 </body>
 
 </html>
