--- a/Events.html
+++ b/Events.html
@@ -34,7 +34,6 @@
             function closeNav() {
                 document.getElementById("myNav").style.width = "0%";
             }
-
         </script>
         <img src="images/godtoel_logo.png" width="100px" alt="Godt øl logo">
         <p><a href="https://www.facebook.com/godtoel.dk/"> <i class="fa fa-facebook-official w3-hover-opacity"></i></a></p>
@@ -52,7 +51,7 @@
                 <h1>Kommende events</h1>
                 <h4>Ølsmagning og foredrag</h4>
                 <p>Kom med til ølsmagning ved Kent Brunstedt og smag på 8 forskellige øl. <br>Vi tager på en tur igennem de forskellige ølstilarter og hører lidt om, <br>hvad der kendetegner de enkelte øltyper. <br>Derudover kan du høre et lille foredrag, hvor Kent fortæller om øl.<br> Kent har selv brygget øl i de sidste 10 år. <br>Vi starter med det mest kendte, en pilsner og bevæger os rundt i forskellige stilarter, <br>med indslag om de forskellige råvarer, vand, malt, humle og gær <br>som er de væsentlige ting man bruger til ølfremstilling.<br> Vi ender med lidt mørk / kraftig øl. Undervejs vil der være <br>lidt salt, ost og sødt til ganen. Mød op og få en hyggelig aften i ølletstegn. <br>Vi glæder os til at se dig.
-                <p>Hele herligheden koster 200 kr. <br>Vi starter kl. 19 og slutter ca. kl. 21.<br> Billetter til ølsmagningen kan købes på billetto.</p>
+                    <p>Hele herligheden koster 200 kr. <br>Vi starter kl. 19 og slutter ca. kl. 21.<br> Billetter til ølsmagningen kan købes på billetto.</p>
             </div>
 
             <div class="image">
@@ -65,7 +64,8 @@
 </body>
 
 <footer>
-
+    <p>&copy;Gruppe 14</p>
 </footer>
+
 
 </html>
