--- a/oelkort.html
+++ b/oelkort.html
@@ -42,30 +42,31 @@
         <img src="images/godtoel_logo.png" width="100px" alt="Godt øl logo">
         <p><a href="https://www.facebook.com/godtoel.dk/"> <i class="fa fa-facebook-official w3-hover-opacity"></i></a></p>
     </header>
+
+    <section id="oelkort">
+        <h1>Ølkort</h1>
+        <div class="beer">
+            <div class="billede"><img src="images/1.jpg"></div>
+            <div class="billede"><img src="images/2.jpg"></div>
+            <div class="billede"><img src="images/3.jpg"></div>
+            <div class="billede"><img src="images/4.jpg"></div>
+            <div class="billede"><img src="images/5.jpg"></div>
+            <div class="billede"><img src="images/6.jpg"></div>
+            <div class="billede"><img src="images/7.jpg"></div>
+            <div class="billede"><img src="images/8.jpg"></div>
+            <div class="billede"><img src=images/9.jpg></div>
+            <div class="billede"><img src="images/10.jpg"></div>
+            <div class="billede"><img src="images/11.jpg"></div>
+            <div class="billede"><img src="images/12.jpg"></div>
+        </div>
+
+
+
+    </section>
+
+    <footer>
+        <p>&copy;Gruppe 14</p>
+    </footer>
+
 </body>
-<section id="oelkort">
-    <h1>Ølkort</h1>
-    <div class="beer">
-        <div class="billede"><img src="images/1.jpg"></div>
-        <div class="billede"><img src="images/2.jpg"></div>
-        <div class="billede"><img src="images/3.jpg"></div>
-        <div class="billede"><img src="images/4.jpg"></div>
-        <div class="billede"><img src="images/5.jpg"></div>
-        <div class="billede"><img src="images/6.jpg"></div>
-        <div class="billede"><img src="images/7.jpg"></div>
-        <div class="billede"><img src="images/8.jpg"></div>
-        <div class="billede"><img src=images/9.jpg></div>
-        <div class="billede"><img src="images/10.jpg"></div>
-        <div class="billede"><img src="images/11.jpg"></div>
-        <div class="billede"><img src="images/12.jpg"></div>
-    </div>
-
-
-
-</section>
-
-<footer>
-
-</footer>
-
 </html>
