--- a/Forside.html
+++ b/Forside.html
@@ -26,9 +26,9 @@
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 
             <div class="overlay-content">
-
+                <a href="Forside.html">
                 <img src="images/godtoel_logo.png" width="150px" alt="Godt øl logo">
-
+                </a>
                 <a href="Forside.html">FORSIDE</a>
 
                 <a href="om.html">OM GODT ØL</a>
@@ -59,6 +59,7 @@
                 document.getElementById("myNav").style.width = "0%";
 
             }
+
         </script>
 
         <img src="images/godtoel_logo.png" width="100px" alt="Godt øl logo">
@@ -141,6 +142,7 @@
             showCanvasCtx.restore();
 
         }
+
     </script>
 
 
