link i header logo

--- a/om.html
+++ b/om.html
@@ -40,7 +40,9 @@
                 document.getElementById("myNav").style.width = "0%";
             }
         </script>
-        <img src="images/godtoel_logo.png" width="100px" alt="Godt øl logo">
+        <a href="Forside.html">
+                <img src="images/godtoel_logo.png" width="100px" alt="Godt øl logo">
+                </a>
         <p><a href="https://www.facebook.com/godtoel.dk/"> <i class="fa fa-facebook-official w3-hover-opacity"></i></a></p>
     </header>
     <section id="Om">
